<?xml version="1.0"?>
<package>
  <name>mrp2_analyzer</name>
  <version>0.2.3</version>
  <description>The diagnostic package for MRP2.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="bolkaraltuntas@gmail.com">Bolkar Altuntas</author>
  <url type="website">http://wiki.ros.org/mrp2_analyzer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/plugins/mrp2_analyzer_plugin.xml" />
  </export>
</package>