<?xml version="1.0"?>
<package>
  <name>mrp2_common</name>
  <version>0.2.1</version>
  <description>Necessary packages in common for both simulation and real environment.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/Robots/MRP2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mrp2_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
