<?xml version="1.0"?>
<package>
  <name>mrp2_common</name>
  <version>1.0.0</version>
  <description>Necessary packages in common for both simulation and real environment.</description>
  <maintainer email="emircem.g@milvusrobotics.com">Emir Cem Gezer</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/mrp2_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mrp2_teleop</run_depend>
  <run_depend>mrp2_description</run_depend>
  <run_depend>mrp2_navigation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
