<?xml version="1.0"?>
<package>
  <name>mrp2_control</name>
  <version>0.2.1</version>
  <description>Teleoperation and ros controls related launch files and configurations.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/Robots/MRP2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>interactive_marker_twist_server</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>robot_localization</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>

</package>