<?xml version="1.0"?>
<package>
  <name>mrp2_description</name>
  <version>0.2.3</version>
  <description>URDF and xacro description files for MRP2.</description>
  <maintainer email="akifhno@gmail.com">Akif Hacinecipoglu</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/mrp2_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

</package>