<?xml version="1.0"?>
<package>
  <name>mrp2_slam</name>
  <version>1.0.0</version>
  <description>Launch scripts for mapping operations</description>
  <license>BSD</license>
  <author email="onrdemirezen@gmail.com">Onur Demirezen</author>
  <maintainer email="emircem.g@milvusrobotics.com">Emir Cem Gezer</maintainer>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>amcl</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>tf</build_depend>
</package>