<?xml version="1.0"?>
<package>
  <name>mrp2_teleop</name>
  <version>0.2.3</version>
  <description>Teleoperation and ros controls related launch files and configurations.</description>
  <maintainer email="emircem.g@milvusrobotics.com">Emir Cem Gezer</maintainer>
  <license>BSD</license>

  <author email="akifhno@gmail.com">Akif Hacinecipoglu</author>
  <url type="website">http://wiki.ros.org/mrp2_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>interactive_marker_twist_server</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joy_teleop</build_depend>



  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy_teleop</run_depend>



</package>